--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -48,6 +48,8 @@
           ])))
         })
       }
+
+      window.lcd ??= designerCtx
     </script>
 
     <!-- 渲染 JSON -->
@@ -71,29 +73,25 @@
             loading: () => h('h1', { style: 'margin: 0; text-align: center; transform: translate(0, 45vh);' }, 'Loading……')
           }),
           // free drag
-          (() => {
-            const { hover } = designerCtx
-            if (!hover?.isAbs || !hover.el) return
-            return h(Moveable, {
-              key: hover.id,
-              target: hover.el,
-              draggable: true,
-              origin: false,
-              hideDefaultLines: true,
-              throttleDrag: 1,
-              snappable: true,
-              elementGuidelines: [hover.parent, ...hover.siblings || []]?.map(e => e?.el),
-              snapDirections: Object.fromEntries(['top', 'left', 'bottom', 'right', 'center', 'middle'].map(e => [e, true])),
-              elementSnapDirections: Object.fromEntries(['top', 'left', 'bottom', 'right', 'center', 'middle'].map(e => [e, true])),
-              onDragStart: e => designerCtx.activeId = designerCtx.draggedId = hover.id,
-              onDrag: e => e.target.style.transform = e.transform,
-              onDragEnd: e => {
-                const style = hover.data.style ??= {}
-                style.transform = e.target.style.getPropertyValue('transform')
-                designerCtx.draggedId = undefined
-              }
-            })
-          })()
+          lcd.hover?.isAbs && lcd.hover?.el && h(Moveable, {
+            key: lcd.hover.id,
+            target: lcd.hover.el,
+            draggable: true,
+            origin: false,
+            hideDefaultLines: true,
+            throttleDrag: 1,
+            snappable: true,
+            elementGuidelines: [lcd.hover.parent, ...lcd.hover.siblings || []]?.map(e => e?.el),
+            snapDirections: Object.fromEntries(['top', 'left', 'bottom', 'right', 'center', 'middle'].map(e => [e, true])),
+            elementSnapDirections: Object.fromEntries(['top', 'left', 'bottom', 'right', 'center', 'middle'].map(e => [e, true])),
+            onDragStart: e => lcd.activeId = lcd.draggedId = lcd.hover.id,
+            onDrag: e => e.target.style.transform = e.transform,
+            onDragEnd: e => {
+              const style = lcd.hover.data.style ??= {}
+              style.transform = e.target.style.getPropertyValue('transform')
+              lcd.draggedId = undefined
+            }
+          })
         ]
       })
 
