--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -65,7 +65,7 @@
         },
         render: () => [
           // todo updated
-          h(ConfigProvider, designerCtx.root, {
+          h(ConfigProvider, { schema: designerCtx.root }, {
             default: () => h(DragBox, { root: designerCtx.root }),
             loading: () => h('h1', { style: 'margin: 0; text-align: center; transform: translate(0, 45vh);' }, 'Loading……')
           }),
